--- a/docs/_static/css/modify.css
+++ b/docs/_static/css/modify.css
@@ -140,7 +140,7 @@ a:visited {
 
 @media screen and (min-width: 1100px) {
   .wy-nav-content-wrap {
-      background-color: var(--color--warmgraylight) !important;
+      background-color: var(--color--lightgreen) !important;
   }
 }
 
